[metadata]
name = CTF_Library
version = attr: CTF_Library.__version__
description = My Library for CTF competitions
author = Aeren
author_email = tiltingwindmill1564@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.12.0
install_requires =
	pycryptodome>=3.21.0
	pwntools>=4.14.1

[options.packages.find]
include = CTF_Library*
exclude = tests*

[options.package_data]
* = *.so, *.pyd